# max-agentic-cookbook

./: .dockerignore  .gitignore  .prettierrc  AGENTS.md  Dockerfile  LICENSE  README.md  TODO-FRONTEND.md  ecosystem.config.js  package.json  pixi.toml
.claude/: project-context.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  validate-metadata.yml
agentic-puzzles/: metadata.yaml  multiagent_chess.py  pyproject.toml
ai-weather-agent/: .gitignore  Procfile  Procfile.clean  Procfile.demo  README.md  metadata.yaml  pixi.toml
ai-weather-agent/backend/: .env.sample  pyproject.toml
ai-weather-agent/frontend/: package-lock.json  package.json  pixi.toml
apps/cookbook/: ecosystem.config.js  package.json  tailwind.config.ts
archive/: .gitignore  README.md
archive/custom-ops-ai-applications/: README.md
archive/gpu-functions-mojo/: README.md
archive/max-mcp-agent/: .env.sample  README.md  pyproject.toml
archive/max-offline-inference/: README.md
archive/max-serve-anythingllm/: test.py
archive/max-serve-continuous-chat/: pyproject.toml  run.sh  ui.py
archive/max-serve-open-webui/: Procfile  pyproject.toml  test.py
archive/max-serve-openai-function-calling/: README.md
archive/multimodal-rag-with-colpali-llamavision-reranker/: Procfile.clean  Procfile.demo  app.py
archive/scripts/: run_tests.py
autodoc-repo-chat-agent/: .gitignore  Dockerfile  README.md  main.py  metadata.yaml  pyproject.toml
backend/: .sample.env  README.md  pyproject.toml
backend/src/: __init__.py  cli.py  main.py
backend/src/core/: code_reader.py  endpoints.py
backend/src/recipes/: __init__.py  batch_text_classification.py  code_generation.py  image_captioning.py  image_generation.py  models.py  multiturn_chat.py
code-execution-sandbox-agent-with-e2b/: .env.example  .gitignore  README.md  agent.py  hello.py  metadata.yaml  pyproject.toml
custom-ops-ai-applications/: README.md  benchmarks.mojo  fused_attention.py  metadata.yaml  pyproject.toml  top_k.py
custom-ops-ai-applications/operations/: fused_attention.mojo  top_k.mojo
custom-ops-introduction/: README.md  add_one.py  mandelbrot.py  pyproject.toml  vector_addition.py
custom-ops-introduction/operations/: add_one.mojo  mandelbrot.mojo  vector_addition.mojo
custom-ops-matrix-multiplication/: README.md  benchmarks.mojo  matrix_multiplication.py  metadata.yaml  pyproject.toml
custom-ops-matrix-multiplication/operations/: matrix_multiplication.mojo
deepseek-qwen-autogen-agent/: README.md  chat_agent.py  metadata.yaml  pyproject.toml  screenplay_agents.py  utils.py
docs/: api.md  architecture.md  contributing.md  docker.md
docs/.claude/: DARK_MODE_FIX_SUMMARY.md  PLAYWRIGHT_DEMO.md
frontend/: .gitignore  README.md  TESTING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: app-navigation.spec.ts  theme-initialization.spec.ts
frontend/playwright-report/: index.html
frontend/scripts/: capture-screenshots.cjs  copy-recipe-code.js
frontend/src/: App.css  App.tsx  index.css  main.tsx  mdx.d.ts
frontend/src/lib/: api.ts  (+5 more)
frontend/test-results/: .last-run.json
genai-cookbook/: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  .sample.env  Dockerfile  README.md  ecosystem.config.js  endpoints.json  instrumentation.ts  metadata.yaml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
gpu-functions-mojo/: README.md  grayscale.mojo  mandelbrot.mojo  metadata.yaml  naive_matrix_multiplication.mojo  pyproject.toml  vector_addition.mojo
max-fastmcp/: .env.sample  .sample.env  README.md  pyproject.toml  tasks.py
max-mcp-agent/: .gitignore  README.md  metadata.yaml  tasks.py
max-mcp-openai-agents-sdk/: main.py  pyproject.toml  pyrightconfig.json  ruff.toml  tasks.py  utils.py
max-mcp-openai-agents-sdk/app/: __init__.py  __main__.py
max-mcp-openai-agents-sdk/max_mcp/: __init__.py  __main__.py  agent.py
max-offline-inference/: .env.example  .gitignore  README.md  main.py  metadata.yaml  pyproject.toml
max-offline-inference/src/max_offline_inference/: __main__.py
max-serve-anythingllm/: .gitignore  README.md  main.py  metadata.yaml  pyproject.toml  setup.py
max-serve-continuous-chat/: Procfile  Procfile.clean  README.md  docker-compose.yml  metadata.yaml  pyproject.toml  run.sh  ui.py
max-serve-multimodal-structured-output/: Procfile  Procfile.clean  README.md  main.py  metadata.yaml  pyproject.toml
max-serve-open-webui/: .gitignore  .webui_secret_key  Procfile  Procfile.clean  README.md  metadata.yaml  pyproject.toml
max-serve-open-webui/data/: config.json  old_config.json  webui.db
max-serve-open-webui/data/uploads/: 2fdcb057-a7cb-4ee0-9fb9-ea9cfa2e8cf7_Roxy.txt  41c3c828-672f-4cdb-8356-8542236af732_Dino.txt  55ef15db-3ac1-44a5-92f4-998304ce37e6_Quincy.txt  6a098037-02bc-448a-9d11-6cce5e9d7ded_Minnie.txt  a02a93df-263f-4c4c-92ea-522e661f2f1c_Sandy.txt
max-serve-open-webui/data/vector_db/: chroma.sqlite3
max-serve-openai-embeddings/: .gitignore  Dockerfile  Procfile  Procfile.clean  README.md  docker-compose.yaml  main.py  metadata.yaml  pyproject.toml  run.sh  wait_and_run.sh
max-serve-openai-embeddings/src/max_embeddings/: __main__.py
max-serve-openai-function-calling/: .env.sample  README.md  app.py  metadata.yaml  multi_function_calls.py  pyproject.toml  run.sh  single_function_call.py
mojo-operation-template/: .gitignore  README.md  benchmarks.mojo  debug_amd.sh  graph.py  metadata.yaml  profile_amd.sh  pyproject.toml
mojo-operation-template/mojo_tests/: test_correctness.mojo
mojo-operation-template/operations/: graph_operation.mojo  matrix_multiplication.mojo
mojo-operation-template/tests/: common.py  conftest.py  test_correctness.py
monorepo/: pnpm-lock.yaml
multimodal-rag-with-colpali-llamavision-reranker/: .gitignore  Procfile  Procfile.clean  Procfile.demo  README.md  app.py  metadata.yaml  pyproject.toml
scripts/: run_tests.py  validate_metadata.py
(+321 files in other folders)
