[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
dependencies = ["autogen-agentchat==0.4.7", "autogen-ext[openai]==0.4.7", "rich>=13.9.4,<14", "python-chess>=1.999,<2", "pydantic>=2.10.6,<3"]
name = "agentic-puzzles"
requires-python = ">=3.10,<3.13"
version = "0.0.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
agentic_puzzles = { path = ".", editable = true }

[tool.pixi.tasks]
server = "(magic global install max-pipelines && magic global update max-pipelines) || true; MAX_SERVE_PORT=8010 MAX_SERVE_HOST=0.0.0.0 max-pipelines serve --huggingface-repo-id=Qwen/Qwen2.5-7B-Instruct-1M --max-length 128000 --max-batch-size 1"
chess = "magic run python multiagent_chess.py"
