[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
name = "autodoc-repo-chat-agent"
requires-python = ">=3.10,<3.13"
version = "0.0.0"
dependencies = [
  "openai>=1.65.4,<2",
  "pydantic>=2.10.6,<3",
  "gitingest>=0.1.3,<0.2",
  "qdrant-client>=1.13.3,<2",
  "sentence-transformers>=3.4.1,<4",
  "aiohttp>=3.11.13,<4",
  "mkdocs>=1.6.1,<2",
  "mkdocs-material>=9.6.7,<10",
  "pyyaml>=6.0.2,<7",
  "rich>=13.9.4,<14",
  "docutils>=0.21.2,<0.22",
  "aiofiles>=24.1.0,<25",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
  "conda-forge",
  "https://conda.modular.com/max-nightly",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
autodoc_repo_chat_agent = { path = ".", editable = true }

[tool.pixi.tasks]
server = "MAX_SERVE_PORT=8010 max-pipelines serve --model-path Qwen/Qwen2.5-7B-Instruct-1M --max-batch-size 100 --enable-prefix-caching"
agent = "TOKENIZERS_PARALLELISM=false magic run python main.py"
clean = "rm -rf ./docs repo_content.json || true"
tests = "echo 'test passed'"
