[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
name = "autodoc-repo-chat-agent"
requires-python = ">=3.10,<3.13"
version = "0.0.0"
dependencies = [
  "openai>=1.65.4",
  "pydantic>=2.10.6",
  "gitingest>=0.1.3",
  "qdrant-client>=1.13.3",
  "sentence-transformers>=3.4.1",
  "aiohttp>=3.11.13",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.7",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "docutils>=0.21.2",
  "aiofiles>=24.1.0",
  "modular>=25.3.0",
  "poethepoet>=0.35.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.poe.tasks]
server = { cmd = "max serve --model-path Qwen/Qwen2.5-7B-Instruct-1M --max-batch-size 100 --enable-prefix-caching", env = { MAX_SERVE_PORT = "8010", MODULAR_STRUCTURED_LOGGING="False" } }
agent = { cmd = "python main.py", env = { TOKENIZERS_PARALLELISM = "false" } }
clean = "rm -rf ./docs repo_content.json || true"
tests = "echo 'test passed'"
