[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
description = "Custom Operations: Applications in AI Models"
name = "custom-ops-ai-applications"
requires-python = ">= 3.9,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.tasks]
package = "mojo package operations/ -o operations.mojopkg"
top_k = { cmd = "python top_k.py", depends-on = ["package"] }
fused_attention = { cmd = "python fused_attention.py", depends-on = ["package"] }
benchmarks = { cmd = "mojo benchmarks.mojo", depends-on = ["package"] }

[tool.pixi.dependencies]
max = "==25.2.0.dev2025031705"
