[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
description = "Custom Operations: Applications in AI Models"
name = "custom-ops-ai-applications"
requires-python = ">= 3.9,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.tasks]
top_k = "python top_k.py"
fused_attention = "python fused_attention.py"
benchmarks = "mojo benchmarks.mojo"
tests = "echo 'test passed'"

[tool.pixi.dependencies]
max = "==25.4.0.dev2025050919"
