[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
description = "GPU Functions in Mojo: A CUDA-style Programming Interface"
name = "gpu-functions-mojo"
requires-python = ">= 3.9,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.tasks]
vector_addition = "mojo vector_addition.mojo"
grayscale = "mojo grayscale.mojo"
naive_matrix_multiplication = "mojo naive_matrix_multiplication.mojo"
mandelbrot = "mojo mandelbrot.mojo"

[tool.pixi.dependencies]
max = "==25.3.0.dev2025042905"
