[project]
name = "max-mcp-openai-agents-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "honcho>=2.0.0",
    "invoke>=2.2.0",
    "mcp>=1.8.1",
    "modular>=25.3.0",
    "openai-agents>=0.0.14",
    "ruff>=0.11.9",
]
