[project]
authors = [{name = "Modular", email = "hello@modular.com"}]
description = "Open WebUI backed by MAX Serve"
name = "max-serve-open-webui"
requires-python = "== 3.11"
version = "0.1.0"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = ["https://conda.modular.com/max-nightly", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community", "conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
max_serve_open_webui = { path = ".", editable = true }

# Define separate environments for MAX and Open WebUI
[tool.pixi.environments]
ui = ["ui"]
max = ["max"]

# OPEN WEBUI ENVIRONMENT
## Dependencies
[dependency-groups]
ui = ["open-webui"]

## Tasks
[tool.pixi.feature.ui.tasks]
ui = { cmd = "open-webui serve", env = { DATA_DIR = "./data", WEBUI_AUTH = "false" } }

# MAX ENVIRONMENT
## Dependencies
[tool.pixi.feature.max.dependencies]
max-pipelines = "*"

## Tasks
[tool.pixi.feature.max.tasks]
max = "max-pipelines serve --huggingface-repo-id=modularai/llama-3.1 --max-length 16384"

# BASE ENVIRONMENT
# Dependencies
[tool.pixi.dependencies]
honcho = ">=2.0.0,<3"

# Tasks
[tool.pixi.tasks]
app = "honcho start"
