[project]
authors = [{ name = "Modular", email = "hello@modular.com" }]
description = "Run MPNet on MAX Serve with Docker to generate embeddings"
name = "max-embeddings"
requires-python = ">= 3.12, <= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = [
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
    "conda-forge",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
max_embeddings = { path = ".", editable = true }

[tool.pixi.tasks]
app = { cmd = "bash run.sh", depends-on = "clean" }
clean = "docker-compose --profile cpu --profile gpu down 2>/dev/null || true"
test = "python -m max_embeddings"

[tool.pixi.dependencies]
openai = ">=1.61.0,<2"
docker-compose = ">=2.32.4,<3"
bash = ">=5.2.21,<6"
