[project]
authors = [{ name = "Modular", email = "hello@modular.com" }]
description = "Run MPNet on MAX Serve with Docker to generate embeddings"
name = "max-embeddings"
requires-python = ">= 3.12, <= 3.13"
version = "0.0.0"
dependencies = [
    "tenacity>=9.0.0,<10",
    "openai>=1.57.3,<2",
    "requests>=2.32.3,<3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
    "conda-forge",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
max_embeddings = { path = ".", editable = true }

[tool.pixi.tasks]
app = "honcho start"
clean = "honcho -f Procfile.clean start"
test = "honcho start"

[tool.pixi.dependencies]
docker-compose = ">=2.32.4,<3"
bash = ">=5.2.21,<6"
honcho = ">=2.0.0,<3"
