[project]
authors = [{ name = "Modular", email = "hello@modular.com" }]
description = "Run MPNet on MAX Serve with Docker to generate embeddings"
name = "max-embeddings"
requires-python = ">= 3.12, <= 3.13"
version = "0.0.0"
dependencies = [
    "tenacity>=9.0.0,<10",
    "openai>=1.57.3,<2",
    "requests>=2.32.3,<3",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
max_embeddings = { path = ".", editable = true }

[tool.pixi.tasks]
server = "MAX_SERVE_PORT=8000 max-pipelines serve --model-path sentence-transformers/all-mpnet-base-v2"
main = "python main.py"
tests = "bash wait_and_run.sh"

[tool.pixi.dependencies]
docker-compose = ">=2.32.4,<3"
bash = ">=5.2.21,<6"
honcho = ">=2.0.0,<3"
max-pipelines = "*"
pydantic = ">=2.11.4,<3"
lsof = ">=4.99.4,<5"
