[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
description = "Continuous Chat App with MAX Serve and lama3"
name = "max-serve-continuous-chat"
requires-python = ">= 3.9,<3.13"
version = "0.0.0"
dependencies = [
    "gradio>=5.8.0",
    "fastapi>=0.115.6",
    "requests>=2.32.3",
    "openai>=1.57.3",
    "tenacity>=9.0.0",
    "transformers>=4.47.0",
    "click>=8.1.7",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "https://conda.modular.com/max-nightly",
    "conda-forge",
]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
max-serve-continuous-chat = { path = ".", editable = true }

[tool.pixi.tasks]
app = "honcho start"
clean = "honcho -f Procfile.clean start"
tests = "echo 'test passed'"

[tool.pixi.dependencies]
docker-compose = ">=2.32.4"
bash = ">=5.2.21"
honcho = ">=2.0.0"
modular = ">=25.5.0.dev2025070905"
